--- a/STLTDD/app/src/main/res/layout/activity_homeph.xml
+++ b/STLTDD/app/src/main/res/layout/activity_homeph.xml
@@ -32,7 +32,6 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="90dp"
                 android:fontFamily="@font/baloo"
-                android:layout_marginEnd="27dp"
                 android:text="Dashboard"
                 android:textSize="22sp"
                 app:layout_constraintEnd_toStartOf="@+id/imgparent"
@@ -44,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/baloo"
-                android:text="Phụ huynh"
+                android:text="@string/tvPhuHuynh"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="@+id/textView"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -75,17 +74,6 @@
                         android:paddingStart="16dp"
                         android:text="@string/tvGreet"
                         android:textSize="14sp" />
-                    <TextView
-                        android:id="@+id/tvEditProfile"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:paddingEnd="8dp"
-                        android:text="@string/tvEditProfile"
-                        android:textStyle="bold"
-                        android:textSize="10sp"
-                        android:textColor="#0521B0"
-                        android:layout_alignParentEnd="true"/>
                 </RelativeLayout>
                 <TextView
                     android:id="@+id/tvGreet1"
@@ -108,6 +96,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/rlGreet">
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cvPoint"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
@@ -143,6 +132,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cvFee"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
@@ -188,6 +178,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cvTimeTable"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
@@ -223,6 +214,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cvLogout"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
