--- a/STLTDD/app/src/main/res/layout/item_course_name.xml
+++ b/STLTDD/app/src/main/res/layout/item_course_name.xml
@@ -8,7 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="17sp"
         android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"/>
+        android:layout_marginBottom="12dp"
+        android:text="@string/tvLoading"/>
 </LinearLayout>
